--- a/index.html
+++ b/index.html
@@ -9,24 +9,27 @@
   <h1 id="title">Tower of Hanoi</h1>
   <div id="towerBox">
     <ul id="towerList">
+      <li id="1" ondrop="drop(event)" ondragover="allowDrop(event)"> 
+        <div class="tower" style="background: #F57D00"></div>
+        <div class="ring"></div>
+      </li>
+      <li id="2" ondrop="drop(event)" ondragover="allowDrop(event)">
+        <div class="tower" style="background: #9c27b0"></div>
+      </li>
+      <li id="3" ondrop="drop(event)" ondragover="allowDrop(event)">
+        <div class="tower" style="background: #7e57c2"></div>
+      </li>
     </ul>
       <div id="towerBase"></div>
   </div>  
   <div id="optionBox">
-    <div id="noOfTowers" class="options">
-      <h3>Towers</h3>
-      <button onclick="subtract(0)">-</button>
-      <span id="towerDisp">3</span>
-      <button onclick="add(0)">+</button>
-    </div>
     <div id="noOfRings" class="options">
-      <h3>Rings</h3>
-      <button onclick="subtract(1)">-</button>
+      <h3>No. Of Disks</h3>
+      <button onclick="subtract()">-</button>
       <span id="ringDisp">8</span>
-      <button onclick="add(1)">+</button>
+      <button onclick="add()">+</button>
     </div>
   </div>
-    <div id="submitButton" onclick="setState()">Apply</div>
 
     <script src="index.js"></script>
 </body>
