--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
   <div id="towerBox">
     <ul id="towerList">
       <li id="1" ondrop="drop(event)" ondragover="allowDrop(event)"> 
-        <div class="tower" style="background: #F57D00"></div>
+        <div class="tower" style="background: #F57D00" towerno="1"></div>
         <div class="ring"></div>
       </li>
       <li id="2" ondrop="drop(event)" ondragover="allowDrop(event)">
-        <div class="tower" style="background: #9c27b0"></div>
+        <div class="tower" style="background: #9c27b0" towerno="2"></div>
       </li>
       <li id="3" ondrop="drop(event)" ondragover="allowDrop(event)">
-        <div class="tower" style="background: #7e57c2"></div>
+        <div class="tower" style="background: #7e57c2" towerno="3"></div>
       </li>
     </ul>
       <div id="towerBase"></div>
